fix z-index on header wrapper

--- a/src/components/home-page/header-section/sub-components/header-wrapper/styles.module.css
+++ b/src/components/home-page/header-section/sub-components/header-wrapper/styles.module.css
@@ -1,5 +1,5 @@
 .wrapper {
-  @apply h-screen flex flex-col bg-cover bg-fixed relative;
+  @apply h-screen flex flex-col bg-cover bg-fixed relative z-0;
 }
 
 /* .wrapper {
